# diffbro

./: .aider.input.history  .gitignore  README.md  pyproject.toml  tox.ini
py_diffbro/: main.py
py_diffbro/modules/: app_config.py  app_types.py  bro.py  cmd.py  constants.py  git.py  llm.py
scripts/: publish_pypi.py
