[tool.poetry]
name = "diffbro"
version = "0.1.3"
description = "Your personal AI assistant bro for better code reviews."
authors = ["IndyDevDan <minor7addfloortom@gmail.com>"]
readme = "README.md"
packages = [{include = "py_diffbro"}]

[tool.poetry.dependencies]
python = "^3.10"
openai = "^0.27.8"
python-dotenv = "^1.0.0"
pydantic = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
diffbro = "py_diffbro.main:main"
