[tool.poetry]
name = "diffbro"
version = "1.0.2"
description = "Your personal AI assistant bro for better code reviews."
authors = ["IndyDevDan <minor7addfloortom@gmail.com>"]
readme = "README.md"
packages = [{include = "py_diffbro"}]
exclude = ["scripts/*"]
license = "MIT"
repository = "https://github.com/disler/diffbro.git"

[tool.poetry.dependencies]
python = "^3.8"
openai = "^0.27.8"
python-dotenv = "^1.0.0"
pydantic = "^2.1.1"


[tool.poetry.group.dev.dependencies]
tox = "^4.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
diffbro = "py_diffbro.main:main"